UPDATE: Add custom AssetListExportPlugin (webpack)

--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,9 @@
       gtag('js', new Date());
       gtag('config', '<%= htmlWebpackPlugin.options.ga %>');
     </script>
+    <script>
+      window.preloadAssets = JSON.parse('<%= htmlWebpackPlugin.options.assets %>');
+    </script>
   </head>
   <body class="light">
     <noscript>
