--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=0" />
     <meta property="og:title" content="<%= htmlWebpackPlugin.options.title %>" />
     <meta property="og:description" content="<%= htmlWebpackPlugin.options.description %>" />
-    <meta property="og:image" content="<%= htmlWebpackPlugin.options.publicPath %>cover.jpg" />
+    <meta property="og:image" content="<%= htmlWebpackPlugin.options.publicPath %>/cover.jpg" />
     <meta property="og:type" content="website" />
-    <link rel="icon" href="<%= htmlWebpackPlugin.options.publicPath %>favicon.ico" />
+    <link rel="icon" href="<%= htmlWebpackPlugin.options.publicPath %>/favicon.ico" />
     <link
       rel="stylesheet"
       type="text/css"
@@ -23,52 +23,52 @@
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_828x1792.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_828x1792.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_1242x2688.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_1242x2688.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_1125x2436.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_1125x2436.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_1242x2208.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_1242x2208.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_750x1334.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_750x1334.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_2048x2732.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_2048x2732.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_1668x2224.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_1668x2224.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_640x1136.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_640x1136.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_1668x2388.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_1668x2388.png"
     />
     <link
       rel="apple-touch-startup-image"
       media="screen and (device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)"
-      href="<%= htmlWebpackPlugin.options.publicPath %>img/splash/splash_1536x2048.png"
+      href="<%= htmlWebpackPlugin.options.publicPath %>/img/splash/splash_1536x2048.png"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
